[package]
name = "udp2p_discovery"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { path = "../node" }
utils = { path = "../utils" }
udp2p = { path = "../udp2p" }
gd_udp = { path = "../gd_udp" }
record = { path = "../record" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["sync"]}
ritelinked = "0.3.2"
hex = "0.4.3"
protocol = { path = "../protocol" }
transport = { path = "../transport" }