[package]
name = "udp2p_discovery"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Andrew N. Smith <asmith@vrrb.io>"]
description = "The peer discovery package of the udp2p library, used for discovering peers in a peer to peer network"
documentation = "https://doc.rs/udp2p_discovery/0.2.0/udp2p_discovery"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udp2p_node = "0.1.0"
udp2p_utils = "0.2.0"
udp2p_traits = "0.1.0"
udp2p_gd_udp = "0.2.2"
udp2p_record = "0.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["sync"]}
ritelinked = "0.3.2"
hex = "0.4.3"
udp2p_protocol = "0.2.0"
udp2p_transport = "0.2.2"