[package]
name = "udp2p_gossip"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
node = { path = "../node" }
utils = { path = "../utils" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
discovery = { path = "../discovery" }
rand = "0.8.4"
transport = { path = "../transport" }
udp2p = { path = "../udp2p" }