[package]
name = "udp2p_node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha256 = "1.0.3"
udp2p = { path = "../udp2p" }
utils = { path = "../utils" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"