[package]
name = "udp2p_node"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew N. Smith <asmith@vrrb.io>"]
description = "The peer discovery portion of the udp2p  library, used for discovering peers in a peer to peer network"
documentation = "https://doc.rs/udp2p_node/0.2.0/udp2p_node"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha256 = "1.0.3"
udp2p_traits = "0.1.0"
udp2p_utils = "0.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"