[package]
name = "udp2p_protocol"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Andrew N. Smith <asmith@vrrb.io>"]
description = "The peer discovery portion of the udp2p  library, used for discovering peers in a peer to peer network"
documentation = "https://doc.rs/udp2p_protocol/0.2.0/udp2p_protocol"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udp2p_utils = "0.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rand = "0.8.4"
hex = "0.4.3"